fixed overflow problem

--- a/src/components/KimiNoNaWaBackgroundVideo/KimiNoNaWaBackgroundVideo.module.css
+++ b/src/components/KimiNoNaWaBackgroundVideo/KimiNoNaWaBackgroundVideo.module.css
@@ -1,5 +1,5 @@
 .Container {
-  position: relative;
+  position: fixed;
   min-height: 100%;
   max-height: 100%;
   overflow: hidden;
