--- a/src/components/SocialMediaIcons/SocialMediaIcons.module.css
+++ b/src/components/SocialMediaIcons/SocialMediaIcons.module.css
@@ -30,7 +30,7 @@
   z-index: 1;
   top: 150%;
   left: 50%;
-  margin-left: -60px;
+  margin-left: -100px;
 }
 
 .tooltip:hover .tooltiptext {
